# code-maven.rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  check_sites.sh  languages.csv  test.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: rust.yml
data/: languages.csv  no_extension.csv
demo/: config.yaml
demo/bad/: incorrect_timestamp.md
demo/email/: first.md
demo/pages/: about.md  img_with_title.md  img_without_title.md  index.md  links.md  tags.md  usetags.md  with_todo.md
demo_site/: about.html  archive.html  atom  def.html  draft.html  function.html  img_with_title.html  img_without_title.html  index.html  links.html  programming.html  recent.html  robots.txt  sitemap.xml  sub.html  tags.html  usetags.html  var.html  with_todo.html
demo_site/tags/: #.html  \.html  back-slash.html  colon.html  double-quote.html  fn.html  forward-slash.html  img.html  index.html  number-sign.html  println!.html  programming.html  semi-colon.html  single-quote.html  with space.html  with_space.html
examples/pages/: index.md
site/: config.yaml
site/include/: gh-pages.yml
site/pages/: about.md  external-redirect.md  first-version.md  front-matter.md  index.md  internal-redirect.md  recent.md  special-syntax.md  where-is-it-used.md  youtube-with-filename.md  youtube.md
src/: cm-sendgrid.rs  cm_sendgrid.rs  cmliquid.rs  curly.rs  drafts.rs  include_tag.rs  latest_tag.rs  lib.rs  main.rs  new.rs  notifications.rs  recent.rs  todo.rs  web.rs  youtube_tag.rs
templates/: archive.html  atom.xml  email.html  page.html  sitemap.xml  tag.html  tags.html
templates/incl/: footer.html  google.html  header.html  navigation.html
test_cases/: author-not-in-config.md  invalid_liquid.md
test_cases/bad_pages/: invalid_key_in_front_matter.md  missing_front_matter.md
test_cases/config_with_authors/: config.yaml
test_cases/config_with_authors/pages/: index.md
test_cases/demo/: config.yaml
test_cases/demo/examples/: demo.yaml
test_cases/demo/pages/: code.md  def.md  draft.md  fn.md  function.md  html_title.md  img_with_title.md  include.md  links.md  old.md  programming.md  recent.md  sigils.md  sub.md  usetags.md  var.md  with_todo.md  youtube.md
test_cases/invalid_field_in_config/: config.yaml
test_cases/same_nickname_twice/: config.yaml
test_cases/skeleton/: .gitignore  config.yaml
test_cases/skeleton/authors/: foobar.md
test_cases/skeleton/pages/: about.md  index.md
tests/: test_drafts.rs  test_errors.rs  test_new.rs  test_todo.rs
tests/config_with_authors/pages/: about.md  bad_author.md
