[package]
name = "code_maven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
liquid = "0.26"
liquid-core = "0.26"
simple_logger = "4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
markdown = { git = "https://github.com/wooorm/markdown-rs.git" }
regex = "1.10"
chrono = "0.4"
sendgrid = { version = "0.20", features = ["blocking"] }
banner-builder = "0.2"

[[bin]]
name = "code-maven"
path = "src/main.rs"


[lints.clippy]
#unwrap_used = "deny"
#unwrap_or_default = "deny"
pedantic = { priority = -1, level = "deny" }
must_use_candidate = "allow"
manual_string_new = "allow"
needless_pass_by_value = "allow"
no_effect_underscore_binding = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

suspicious = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }

single_call_fn = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
absolute_paths = "allow"
shadow_unrelated = "allow"
exit = "allow" 
indexing_slicing = "allow"
str_to_string = "allow"
shadow_reuse = "allow"
arithmetic_side_effects = "allow"
format_push_string = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
std_instead_of_alloc = "allow"
print_stdout = "allow"
print_stderr = "allow"
redundant_type_annotations = "allow"
default_numeric_fallback = "allow"
exhaustive_structs = "allow"
non_ascii_literal = "allow"
create_dir = "allow"
partial_pub_fields = "allow"
pattern_type_mismatch = "allow"

blanket_clippy_restriction_lints = "allow"