[package]
name = "code_maven"
version = "0.1.0"
edition = "2021"
authors = ["Gabor Szabo"]


exclude = ["/site"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
liquid = "0.26"
liquid-core = "0.26"
simple_logger = "4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
markdown = "1.0.0-alpha.17"
regex = "1.10"
chrono = "0.4"
sendgrid = { version = "0.20", features = ["blocking"] }
banner-builder = "0.2"
tempdir = "0.3"
shadow-rs = "0.26"
feed-rs = "1.3"

[build-dependencies]
shadow-rs = "0.26"

[[bin]]
name = "code-maven"
path = "src/main.rs"


[lints.clippy]
pedantic = { priority = -1, level = "deny" }
must_use_candidate = "allow"
needless_pass_by_value = "allow"
no_effect_underscore_binding = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

suspicious = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }

single_call_fn = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
absolute_paths = "allow"
exit = "allow" 
indexing_slicing = "allow"
str_to_string = "allow"
shadow_reuse = "allow"
arithmetic_side_effects = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
default_numeric_fallback = "allow" # I don't want to write 1_i32 just to make this lint happy
exhaustive_structs = "allow"
pattern_type_mismatch = "allow"
question_mark_used = "allow" # We started to use ? and so we would like to allow it

blanket_clippy_restriction_lints = "allow"

## Added because the file generated by shadow-rs needs these
non_ascii_literal = "allow"
print_stdout = "allow"
needless_raw_strings = "allow"
needless_raw_string_hashes = "allow"

allow_attributes_without_reason = "allow"
allow_attributes = "allow"

arbitrary_source_item_ordering = "allow" # let's not force the order now

